@@ -2,6 +2,10 @@
 
 	* job.c (start_job_command) [WINDOWS32]: Make the same fix for
 	MS-Windows as the previous commit did for Posix platforms.
+	(construct_command_argv_internal): Don't treat a backslash as an
+	escape character before whitespace, if the shell is not a Posix
+	shell.   For the description of the problem, see
+	http://lists.gnu.org/archive/html/make-w32/2013-04/msg00014.html.
 
 2013-05-01  Paul Smith  <psmith@gnu.org>
 
